--- a/app/src/main/res/layout/activity_level_selector.xml
+++ b/app/src/main/res/layout/activity_level_selector.xml
@@ -24,7 +24,7 @@
             android:layout_weight="0.1"
             android:paddingVertical="15dp"
             android:paddingHorizontal="25dp"
-            android:background="@color/colorPrimary">
+            android:background="?attr/colorPrimary">
 
             <Button
                 android:id="@+id/returnLvlBtn"
