--- a/app/src/main/res/layout/activity_options.xml
+++ b/app/src/main/res/layout/activity_options.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="?attr/main_bg">
+        android:background="?attr/options_bg">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,7 +26,7 @@
             android:weightSum="1"
             android:paddingVertical="15dp"
             android:paddingHorizontal="25dp"
-            android:background="@color/colorPrimary">
+            android:background="?attr/colorPrimary">
 
             <Button
                 android:id="@+id/returnOptBtn"
