--- a/app/src/main/res/layout/activity_options.xml
+++ b/app/src/main/res/layout/activity_options.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="customFont"
-            type="com.example.myapplication2.FontOptions"/>
+            type="com.proyecto.cruzando.FontOptions"/>
     </data>
 <ScrollView
     android:layout_width="match_parent"
