--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,7 +17,7 @@
         <item name="options_txt">#FFFFFF</item>
         <item name="options_bg">#2b3953</item>
 
-        <item name="hint_bg">#C15C55</item>
+        <item name="hint_bg">#F9B3AE</item>
         <item name="hint_txt">#000000</item>
 
         <item name="keyboard_bg_key">#2b3953</item>
